# karmony

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  ruff-defaults.toml
.github/: dependabot.yaml
.github/workflows/: lint.yaml  tests.yaml
requirements/: requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-types.txt
src/karmony/: __about__.py  __init__.py  client.py  exceptions.py  networks.py  tokens.py  trackers.py
tests/: conftest.py
tests/integration/: conftest.py  emv_client_test.py
tests/integration/trackers/: coingecko.hurl  coinmarketcap.hurl
tests/unit/: networks_test.py  tokens_test.py  trackers_test.py
